src/Modules/StreamRaiders/streamRaiders.css
@font-face {
    font-family: 'm5x7';
    src: local('./assets/m5x7.ttf');
}

.bottom-center {
    position: fixed;
    bottom: 0;
    left: 50%;
    transform: translate(-50%, 0);
    margin: 0;
}

.bottom-left {
    position: fixed;
    bottom: 0;
    left: -960px;
    transform: translate(0, 0);
    margin: 0;
}

.road-element {
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
}

.road-bg {
    z-index: -5;
}

.road-overlay {
    z-index: -2;
    clip-path: inset(0 1920px 0 0);
}

.city {
    position: absolute;
    bottom: 14px;
    left: 898px;
    /*transform: translateX(-50%);*/
    z-index: 10;
}

.absolute {
    position: absolute;
}

#progress-panel {
    bottom: 13px;
    left: -971px;
    z-index: 10;
}

#progress-sp-container {
    transform: rotate(-90deg);
    bottom: 41px;
    left: -971px;
    z-index: 11;
}

#progress-sp {
    transform: translate(-50%, 0);
    margin: auto;
    color: black;
    font-family: m5x7, serif;
    font-size: 16pt;
    z-index: 11;
}

.character-wrapper {
    position: relative;
    left: -945px;
    bottom: 62px;
    z-index: 30;
}

.character-grid {
    position: relative;
    bottom: 0;
    left: 0;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 0;
}

.character {
    position: absolute;
    left: 0;
    bottom: 0;
    align-items: center;
    justify-content: center;
    width: 48px;
    height: 48px;
    z-index: 30;
}

.character:nth-child(1) {
    top: -12px;
    left: -12px;
}

.character:nth-child(2) {
    top: -12px;
    left: 12px;
}

.character:nth-child(3) {
    top: 12px;
    left: -12px;
}

.character:nth-child(4) {
    top: 12px;
    left: 12px;
}

.milestone-container {
    z-index: 20;
}

.milestone {
    position: absolute;
    bottom: 60px;
}

.milestone-item {
    position: absolute;
}

.milestone-bg {
    z-index: 20;
}

.milestone-reward {
    z-index: 25;
}

.milestone-enemy {
    z-index: 25;
}

.animator {
    display: none;
    position: absolute;
}

